# bot-price-nunes

./: .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  README.md  compose.yaml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yml  deals.yml
app/: __init__.py  affiliate.py  config.py  filters.py  main.py  models.py  resolver.py  stores.py
app/ai/: gemini.py
app/db/: schema.sql  supabase_client.py
app/notify/: telegram.py
app/sources/: amazon.py  base.py  gatry.py  mercadolivre.py  ml_browser.py  pechinchou.py  pelando.py  promobit.py
app/validation/: checkout_sim.py  price_history.py
branding/: BRANDING.md
dashboard/: .gitignore  auth.ts  instrumentation-client.ts  instrumentation.ts  middleware.ts  package-lock.json  package.json  playwright.config.ts  proxy.ts  tsconfig.json  vitest.config.ts
dashboard/__tests__/: DealsDataTable.test.tsx  StatTiles.test.tsx
dashboard/app/: globals.css  layout.tsx  page.tsx
dashboard/components/: DealsDataTable.tsx  DealsFilters.tsx  DealsTable.tsx  FunnelChart.tsx  PostsChart.tsx  RunsTable.tsx  SiteNav.tsx  StatTiles.tsx
dashboard/e2e/: auth-and-pagination.spec.ts
dashboard/lib/: env.ts  queries.ts  supabase.ts
dashboard/scripts/: seed-admin.ts
deploy/oracle/: README.md  dealbot-collect.service  dealbot-collect.timer  dealbot-post.service  dealbot-post.timer  install.sh
tests/: conftest.py  test_affiliate.py  test_filters.py  test_main.py  test_models.py  test_price_history.py  test_sources.py  test_telegram_format.py
(+6 files in other folders)
