[project]
name = "bot-price-nunes"
version = "0.3.0"
description = "Free-tier Telegram deal bot for Brazilian tech e-commerce"
requires-python = ">=3.12"

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["app", "tests"]

[tool.ruff.lint]
select = [
    "E", "W",   # pycodestyle
    "F",        # pyflakes
    "I",        # isort
    "B",        # bugbear
    "UP",       # pyupgrade
    "SIM",      # simplify
]
ignore = [
    "E501",  # long lines: handled by formatter judgment; scraping URLs get long
]

[tool.mypy]
python_version = "3.12"
files = ["app"]
ignore_missing_imports = true
check_untyped_defs = true
warn_unused_ignores = true
no_implicit_optional = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
